# f5-tts-duration

./: README.md  pyproject.toml  train.ipynb
data/de/: vocab.txt
f5_tts/model/: __init__.py  dataset.py  duration.py  modules.py  trainer.py  utils.py
