[project]
name = "f5-tts-duration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.3.0",
    "datasets>=3.2.0",
    "einops>=0.8.0",
    "einx>=0.3.0",
    "ema-pytorch>=0.7.7",
    "huggingface-hub>=0.27.1",
    "ipywidgets>=8.1.5",
    "jieba>=0.42.1",
    "jupyterlab>=4.3.4",
    "librosa>=0.10.2.post1",
    "pypinyin>=0.53.0",
    "soundfile>=0.12.1",
    "torch==2.4.1",
    "torchaudio==2.4.1",
    "torchdiffeq>=0.2.5",
    "torchvision==0.19.1",
    "tqdm>=4.67.1",
    "wandb>=0.19.4",
    "x-transformers>=1.44.4",
]
